compatibility-tests/compile-fail/tests/ui/duplication-backtrace-attributes.stderr
error: Multiple `backtrace` attributes are not supported on a field
 --> $DIR/duplication-backtrace-attributes.rs:8:17
  |
8 |         #[snafu(backtrace)]
  |                 ^^^^^^^^^
